<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pizza"
    android:backgroundTint="#80FFFFFF"
    android:backgroundTintMode="src_over">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.karthik.myorder.MainActivity">

        <EditText
            android:id="@+id/user_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:inputType="textCapWords"/>
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings_reg"
            />

        <CheckBox
            android:id="@+id/onions_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:paddingLeft="24dp"
            android:text="@string/onions"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/peppers_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peppers"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:layout_marginBottom="8sp"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings_prem"
            />

        <CheckBox
            android:id="@+id/sausage_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8sp"
            android:paddingLeft="24dp"
            android:text="@string/sausage"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/pepperoni_checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pepperoni"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:layout_marginBottom="8sp"/>

        <TextView
            style="@style/HeaderTextStyle"

            android:text="@string/quantity"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"

                android:text="-"

                />


            <TextView
                android:id="@+id/quantity_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"

                android:text="@string/initial_quantity_value"

                android:textColor="#000000" />

            <Button

                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"


                android:text="+"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:text="@string/order"
                android:layout_marginRight="16sp"
                android:layout_marginTop="16sp"
                android:onClick="submitOrder"/>

            <Button
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_marginTop="16sp"
                android:text="@string/review"
                android:onClick="reviewOrder"/>




        </LinearLayout>
    </LinearLayout>

</ScrollView>

